2008-07-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c:
   Create a new dict object when the default language in the preferences
   dialog was changed to actually use the new language.


2008-06-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c:
   Use "populate-edit-menu" signal to add a "Spell Check" menu item to
   the editing menu and provide a submenu with suggestions for
   misspelled words and allow to add the word to the personal
   dictionary.


2008-06-19  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * README, configure.in, src/Makefile.am, src/spellcheck.c:
   Use enchant as spell check engine instead of Aspell.
   Highlight only misspelled instead of whole the line.
   Add Tools->Spellcheck sub menu to easily change the language
   to use for spell checking.
   Add "check as you type" feature.
   Change doc pointer usage.
   Update Readme.


2008-06-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c:
   Compilation fixes.
 * Makefile.am:
   Add HTML target.


2008-05-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/spellcheck.c:
   Add new GeanyFunctions API.
   Avoid crashes when LANG environment variable can't be read
   (e.g. on Windows).
   Detect the Aspell installation prefix on Windows and use it to find
   installed dictionaries.
 * makefile.win32:
   Make Windows Makefile working.
 * configure.in:
   Explicitly depend on Geany >= 0.15.


2008-05-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.in:
   Post-release version bump.
   Display install location of the plugin binary and separately the
   location of other files like translations for clarity.
 * src/spellcheck.c:
   Fix a big memory leak and don't use an unneeded array.
   Fix possible crashes on Windows when working on unsaved documents
   (patch by Nick, thanks :)).


2008-05-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * po/*, src/*, *: