@@ -1,3 +1,12 @@
+2008-07-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/spellcheck.c:
+   Add option to enable/disable use of the messages window.
+   Don't act on key release events when the input focus is not in the
+   editor widget.
+   Fix showing an empty Spellcheck menu item in the editor popup menu.
+
+
 2008-07-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/spellcheck.c:
